# aiogram_bot_template

./: .flake8  .gitignore  LICENSE  alembic.ini  pyproject.toml
alembic/: env.py
src/: app.py  settings.py
src/middlewares/: throttling.py
src/models/: __init__.py  base.py
