[tool.poetry]
name = "Chat bot"
version = "0.1.0"
description = "aiogram-bot-template"
authors = ["Ophamino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
cachetools = "^5.3.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
redis = "^5.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.3.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
